# backend-golang/main.go
@@ -2,13 +2,13 @@ package main
 
 import (
 	"backend/api/routes"
-	"backend/pkg/filter"
-	"context"
+	"backend/db"
 	"log"
 
 	_ "backend/docs"
 
 	"github.com/gofiber/fiber/v2"
+	"github.com/gofiber/fiber/v2/middleware/cors"
 	"github.com/gofiber/swagger"
 )
 
@@ -20,23 +20,22 @@ import (
 // @contact.email fiber@swagger.io
 // @license.name Apache 2.0
 // @license.url http://www.apache.org/licenses/LICENSE-2.0.html
-// @host localhost:8001
+// @host localhost:8100
 // @BasePath /
 
 func main() {
+	// Conntec DB
+	session := db.Session()
+	defer session.Close()
+
+	// Launch App
 	app := fiber.New()
+	app.Use(cors.New())
 
 	app.Get("/", func(ctx *fiber.Ctx) error {
 		return ctx.SendString("Hello, World 👋!")
 	})
 	app.Get("/docs/*", swagger.HandlerDefault) // default
-
-	dbUrl := "root:@tcp(localhost:3306)/captured_dev"
-	pageLimit := 50
-	ctx := context.Background()
-	pf := filter.ProductFilter{DbUrl: dbUrl, Limit: pageLimit, Ctx: ctx}
-	api := app.Group("/api")
-	routes.FilterRouter(api, pf)
-
-	log.Fatal(app.Listen(":8001"))
+	routes.ProductRouter(app.Group("/api/product"), session)
+	log.Fatal(app.Listen(":8100"))
 }
